--- a/docs/documentation.mdx
+++ b/docs/documentation.mdx
@@ -1,9 +1,10 @@
-# Vue Live Editor Example
 import Vue from 'vue'
-import Count from '@/components/Count'
-import { LiveEditor } from '@/components'
-import Button from '@/components/Button'
+import Count from '../components/Count'
+import { LiveEditor } from '../components'
+import Button from '../components/Button'
 Vue.component('Button', Button)
+
+# Vue Live Editor Example
 
 
 #  `Demo` example
